<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.compunetlimited.ogan.ebsu.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/quick_links"
            android:textSize="22sp" />

        <Button
            android:id="@+id/timetable_btn"
            style="@style/home_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_event_black_24dp"
            android:text="@string/timetable" />

        <Button
            android:id="@+id/assignment_btn"
            style="@style/home_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_assignment_black_24dp"
            android:text="@string/assignment" />

        <Button
            android:id="@+id/online_test_btn"
            style="@style/home_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_assessment_black_24dp"
            android:text="@string/online_test" />

        <Button
            android:id="@+id/attendance_btn"
            style="@style/home_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_assignment_turned_in_black_24dp"
            android:text="@string/attendance" />

    </LinearLayout>
</ScrollView>